traefik2/traefik1bits/dashboard-service.yaml
---
# Source: traefik/templates/dashboard-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  labels:
    app: traefik
    chart: traefik-1.68.5
    release: "traefik"
    heritage: "Tiller"
  annotations:
spec:
  type: ClusterIP
  selector:
    app: traefik
    release: traefik
  ports:
  - name: dashboard-http
    port: 80
    targetPort: 8080
