traefik2/traefik1bits/dashboard-ingress.yaml
---
# Source: traefik/templates/dashboard-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-dashboard
  labels:
    app: traefik
    chart: traefik-1.68.5
    release: "traefik"
    heritage: "Tiller"
    component: "traefik-traefik-dashboard"
    project: "ingress"
    provider: "agilestacks.com"
  annotations:
    agilestacks.com/stack-component: "Traefik"
    kubernetes.io/ingress.class: ""
spec:
  rules:
  - host: apps.arkadi-basic.dev.superhub.io
    http:
      paths:
      - backend:
          serviceName: traefik-dashboard
          servicePort: 80
